--- a/产品说明.html
+++ b/产品说明.html
@@ -23,6 +23,138 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- Unnamed (矩形) -->
+      <div id="u0" class="ax_default _三级标题">
+        <div id="u0_div" class=""></div>
+        <div id="u0_text" class="text ">
+          <p><span>产品名称：果栏</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u1" class="compound ax_default line" WidgetHeight="1" WidgetWidth="676" CompoundMode="true">
+        <img id="u1_img" class="singleImg img " src="images/产品说明/u1.png"/>
+        <div id="u1p000" class="ax_vector_shape" WidgetTopLeftX="-0.497058823529412" WidgetTopLeftY="0" WidgetTopRightX="0.497058823529412" WidgetTopRightY="0" WidgetBottomLeftX="-0.497058823529412" WidgetBottomLeftY="0.166666666666667" WidgetBottomRightX="0.497058823529412" WidgetBottomRightY="0.166666666666667">
+          <img id="u1p000_img" class="img " src="images/产品说明/u1p000.png"/>
+        </div>
+        <div id="u1p001" class="ax_vector_shape" WidgetTopLeftX="0" WidgetTopLeftY="-0.25" WidgetTopRightX="169" WidgetTopRightY="-0.25" WidgetBottomLeftX="0" WidgetBottomLeftY="0" WidgetBottomRightX="169" WidgetBottomRightY="0">
+          <img id="u1p001_img" class="img " src="images/产品说明/u1p001.png"/>
+        </div>
+        <div id="u1p002" class="ax_vector_shape" WidgetTopLeftX="33.6" WidgetTopLeftY="0.05" WidgetTopRightX="-0.2" WidgetTopRightY="0.05" WidgetBottomLeftX="33.6" WidgetBottomLeftY="0" WidgetBottomRightX="-0.2" WidgetBottomRightY="0">
+          <img id="u1p002_img" class="img " src="images/产品说明/u1p002.png"/>
+        </div>
+      </div>
+
+      <!-- Unnamed (垂直线) -->
+      <div id="u2" class="compound ax_default line" WidgetHeight="636" WidgetWidth="1" CompoundMode="true">
+        <img id="u2_img" class="singleImg img " src="images/产品说明/u2.png"/>
+        <div id="u2p000" class="ax_vector_shape" WidgetTopLeftX="-0.495327102803738" WidgetTopLeftY="0" WidgetTopRightX="-0.495327102803738" WidgetTopRightY="-0.166666666666667" WidgetBottomLeftX="0.495327102803738" WidgetBottomLeftY="0" WidgetBottomRightX="0.495327102803738" WidgetBottomRightY="-0.166666666666667">
+          <img id="u2p000_img" class="img " src="images/产品说明/u2p000.png"/>
+        </div>
+        <div id="u2p001" class="ax_vector_shape" WidgetTopLeftX="-0.181818181818182" WidgetTopLeftY="0" WidgetTopRightX="-0.181818181818182" WidgetTopRightY="-0.0454545454545455" WidgetBottomLeftX="28.7272727272727" WidgetBottomLeftY="0" WidgetBottomRightX="28.7272727272727" WidgetBottomRightY="-0.0454545454545455">
+          <img id="u2p001_img" class="img " src="images/产品说明/u2p001.png"/>
+        </div>
+        <div id="u2p002" class="ax_vector_shape" WidgetTopLeftX="-0.25" WidgetTopLeftY="-159.25" WidgetTopRightX="0" WidgetTopRightY="-159.25" WidgetBottomLeftX="-0.25" WidgetBottomLeftY="-0.25" WidgetBottomRightX="0" WidgetBottomRightY="-0.25">
+          <img id="u2p002_img" class="img " src="images/产品说明/u2p002.png"/>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u3" class="ax_default _三级标题">
+        <div id="u3_div" class=""></div>
+        <div id="u3_text" class="text ">
+          <p><span>重要必须的</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u4" class="ax_default _三级标题">
+        <div id="u4_div" class=""></div>
+        <div id="u4_text" class="text ">
+          <p><span>重要不必须的</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u5" class="ax_default _三级标题">
+        <div id="u5_div" class=""></div>
+        <div id="u5_text" class="text ">
+          <p><span>必须不重要的</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u6" class="ax_default _三级标题">
+        <div id="u6_div" class=""></div>
+        <div id="u6_text" class="text ">
+          <p><span>不重要不必须的</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u7" class="ax_default _文本段落">
+        <div id="u7_div" class=""></div>
+        <div id="u7_text" class="text ">
+          <p><span><br></span></p><p><span>果栏是一款供用户查看水果销售资讯、购买优质实惠水果的应用软件。</span></p><p><span><br></span></p><p><span>产品目前有15个页面，其中5个一级页面，8个二级页面，2个三级页面。</span></p><p><span><br></span></p><p><span>一级页面内容：水果进货资讯、水果列表、社区图文、水果分类、个人中心</span></p><p><span><br></span></p><p><span>二级页面内容：水果列表、登录、注册、收藏夹、我的订单</span></p><p><span><br></span></p><p><span>三级页面：商品详情、商品参数</span></p><p><span><br></span></p><p><span>布局：选择了列表式与瀑布式布局，列表式布局使选项栏排版更清晰，瀑布式布局让用户更直观地看到商品的信息</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u8" class="ax_default _文本段落">
+        <div id="u8_div" class=""></div>
+        <div id="u8_text" class="text ">
+          <p><span><br></span></p><p><span>1、轮播图 </span></p><p><span>2、底部导航栏 </span></p><p><span>3、搜索框</span></p><p><span>4、消息 </span></p><p><span>5、水果名称</span></p><p><span>6、水果价格 </span></p><p><span>7、水果图片 </span></p><p><span>8、优惠数值 </span></p><p><span>9、排序方式 </span></p><p><span>10、看图方式 </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u9" class="ax_default label">
+        <div id="u9_div" class=""></div>
+        <div id="u9_text" class="text ">
+          <p><span>页面信息</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u10" class="ax_default _文本段落">
+        <div id="u10_div" class=""></div>
+        <div id="u10_text" class="text ">
+          <p><span>11、社区用户内容（图文、点赞、评论、转发） </span></p><p><span>12、水果分类 </span></p><p><span>13、收藏物品信息 </span></p><p><span>14、订单状态 </span></p><p><span>15、收货地址 </span></p><p><span>16、地区设置 </span></p><p><span>17、水果库存 </span></p><p><span>18、水果描述 </span></p><p><span>19、购买数量 </span></p><p><span>20、配送区域</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u11" class="ax_default _文本段落">
+        <div id="u11_div" class=""></div>
+        <div id="u11_text" class="text ">
+          <p><span>2、底部导航栏 </span></p><p><span>4、消息 </span></p><p><span>5、水果名称</span></p><p><span>6、水果价格 </span></p><p><span>7、水果图片 </span></p><p><span>8、优惠数值 </span></p><p><span>14、订单状态 </span></p><p><span>15、收货地址 </span></p><p><span>16、地区设置 </span></p><p><span>17、水果库存 </span></p><p><span>19、购买数量 </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u12" class="ax_default _文本段落">
+        <div id="u12_div" class=""></div>
+        <div id="u12_text" class="text ">
+          <p><span>1、轮播图 </span></p><p><span>3、搜索框</span></p><p><span>20、配送区域</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u13" class="ax_default _文本段落">
+        <div id="u13_div" class=""></div>
+        <div id="u13_text" class="text ">
+          <p><span>9、排序方式 </span></p><p><span>10、看图方式 </span></p><p><span>11、社区用户内容（图文、点赞、评论、转发） </span></p><p><span>12、水果分类 </span></p><p><span>13、收藏物品信息 </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u14" class="ax_default _文本段落">
+        <div id="u14_div" class=""></div>
+        <div id="u14_text" class="text ">
+          <p><span>18、水果描述 </span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
