--- a/app版式设计图.html
+++ b/app版式设计图.html
@@ -4397,6 +4397,171 @@
           <img id="u750_img" class="img " src="images/app版式设计图/u393.png"/>
         </div>
       </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u751" class="ax_default _连接线">
+        <img id="u751_seg0" class="img " src="images/app版式设计图/u751_seg0.png" alt="u751_seg0"/>
+        <img id="u751_seg1" class="img " src="images/app版式设计图/u751_seg1.png" alt="u751_seg1"/>
+        <img id="u751_seg2" class="img " src="images/app版式设计图/u751_seg2.png" alt="u751_seg2"/>
+        <img id="u751_seg3" class="img " src="images/app版式设计图/u751_seg3.png" alt="u751_seg3"/>
+        <div id="u751_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u752" class="ax_default _连接线">
+        <img id="u752_seg0" class="img " src="images/app版式设计图/u752_seg0.png" alt="u752_seg0"/>
+        <img id="u752_seg1" class="img " src="images/app版式设计图/u752_seg1.png" alt="u752_seg1"/>
+        <img id="u752_seg2" class="img " src="images/app版式设计图/u752_seg2.png" alt="u752_seg2"/>
+        <img id="u752_seg3" class="img " src="images/app版式设计图/u752_seg3.png" alt="u752_seg3"/>
+        <img id="u752_seg4" class="img " src="images/app版式设计图/u752_seg4.png" alt="u752_seg4"/>
+        <img id="u752_seg5" class="img " src="images/app版式设计图/u752_seg5.png" alt="u752_seg5"/>
+        <div id="u752_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u753" class="ax_default _连接线">
+        <img id="u753_seg0" class="img " src="images/app版式设计图/u751_seg0.png" alt="u753_seg0"/>
+        <img id="u753_seg1" class="img " src="images/app版式设计图/u753_seg1.png" alt="u753_seg1"/>
+        <img id="u753_seg2" class="img " src="images/app版式设计图/u751_seg2.png" alt="u753_seg2"/>
+        <img id="u753_seg3" class="img " src="images/app版式设计图/u751_seg3.png" alt="u753_seg3"/>
+        <div id="u753_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u754" class="ax_default _连接线">
+        <img id="u754_seg0" class="img " src="images/app版式设计图/u751_seg0.png" alt="u754_seg0"/>
+        <img id="u754_seg1" class="img " src="images/app版式设计图/u754_seg1.png" alt="u754_seg1"/>
+        <img id="u754_seg2" class="img " src="images/app版式设计图/u754_seg2.png" alt="u754_seg2"/>
+        <img id="u754_seg3" class="img " src="images/app版式设计图/u752_seg5.png" alt="u754_seg3"/>
+        <div id="u754_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u755" class="ax_default _连接线">
+        <img id="u755_seg0" class="img " src="images/app版式设计图/u755_seg0.png" alt="u755_seg0"/>
+        <img id="u755_seg1" class="img " src="images/app版式设计图/u755_seg1.png" alt="u755_seg1"/>
+        <div id="u755_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u756" class="ax_default _连接线">
+        <img id="u756_seg0" class="img " src="images/app版式设计图/u756_seg0.png" alt="u756_seg0"/>
+        <img id="u756_seg1" class="img " src="images/app版式设计图/u756_seg1.png" alt="u756_seg1"/>
+        <img id="u756_seg2" class="img " src="images/app版式设计图/u756_seg2.png" alt="u756_seg2"/>
+        <img id="u756_seg3" class="img " src="images/app版式设计图/u756_seg3.png" alt="u756_seg3"/>
+        <div id="u756_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u757" class="ax_default _连接线">
+        <img id="u757_seg0" class="img " src="images/app版式设计图/u757_seg0.png" alt="u757_seg0"/>
+        <img id="u757_seg1" class="img " src="images/app版式设计图/u757_seg1.png" alt="u757_seg1"/>
+        <img id="u757_seg2" class="img " src="images/app版式设计图/u757_seg2.png" alt="u757_seg2"/>
+        <img id="u757_seg3" class="img " src="images/app版式设计图/u757_seg3.png" alt="u757_seg3"/>
+        <div id="u757_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u758" class="ax_default _连接线">
+        <img id="u758_seg0" class="img " src="images/app版式设计图/u758_seg0.png" alt="u758_seg0"/>
+        <img id="u758_seg1" class="img " src="images/app版式设计图/u758_seg1.png" alt="u758_seg1"/>
+        <img id="u758_seg2" class="img " src="images/app版式设计图/u758_seg2.png" alt="u758_seg2"/>
+        <img id="u758_seg3" class="img " src="images/app版式设计图/u758_seg3.png" alt="u758_seg3"/>
+        <img id="u758_seg4" class="img " src="images/app版式设计图/u758_seg4.png" alt="u758_seg4"/>
+        <img id="u758_seg5" class="img " src="images/app版式设计图/u758_seg5.png" alt="u758_seg5"/>
+        <div id="u758_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u759" class="ax_default _连接线">
+        <img id="u759_seg0" class="img " src="images/app版式设计图/u759_seg0.png" alt="u759_seg0"/>
+        <img id="u759_seg1" class="img " src="images/app版式设计图/u759_seg1.png" alt="u759_seg1"/>
+        <img id="u759_seg2" class="img " src="images/app版式设计图/u759_seg2.png" alt="u759_seg2"/>
+        <img id="u759_seg3" class="img " src="images/app版式设计图/u759_seg3.png" alt="u759_seg3"/>
+        <img id="u759_seg4" class="img " src="images/app版式设计图/u757_seg3.png" alt="u759_seg4"/>
+        <div id="u759_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u760" class="ax_default _连接线">
+        <img id="u760_seg0" class="img " src="images/app版式设计图/u760_seg0.png" alt="u760_seg0"/>
+        <img id="u760_seg1" class="img " src="images/app版式设计图/u755_seg1.png" alt="u760_seg1"/>
+        <div id="u760_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u761" class="ax_default _连接线">
+        <img id="u761_seg0" class="img " src="images/app版式设计图/u761_seg0.png" alt="u761_seg0"/>
+        <img id="u761_seg1" class="img " src="images/app版式设计图/u761_seg1.png" alt="u761_seg1"/>
+        <img id="u761_seg2" class="img " src="images/app版式设计图/u761_seg2.png" alt="u761_seg2"/>
+        <img id="u761_seg3" class="img " src="images/app版式设计图/u761_seg3.png" alt="u761_seg3"/>
+        <img id="u761_seg4" class="img " src="images/app版式设计图/u761_seg4.png" alt="u761_seg4"/>
+        <img id="u761_seg5" class="img " src="images/app版式设计图/u761_seg5.png" alt="u761_seg5"/>
+        <div id="u761_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u762" class="ax_default _连接线">
+        <img id="u762_seg0" class="img " src="images/app版式设计图/u761_seg0.png" alt="u762_seg0"/>
+        <img id="u762_seg1" class="img " src="images/app版式设计图/u762_seg1.png" alt="u762_seg1"/>
+        <img id="u762_seg2" class="img " src="images/app版式设计图/u762_seg2.png" alt="u762_seg2"/>
+        <img id="u762_seg3" class="img " src="images/app版式设计图/u762_seg3.png" alt="u762_seg3"/>
+        <img id="u762_seg4" class="img " src="images/app版式设计图/u762_seg4.png" alt="u762_seg4"/>
+        <img id="u762_seg5" class="img " src="images/app版式设计图/u762_seg5.png" alt="u762_seg5"/>
+        <div id="u762_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u763" class="ax_default _连接线">
+        <img id="u763_seg0" class="img " src="images/app版式设计图/u763_seg0.png" alt="u763_seg0"/>
+        <img id="u763_seg1" class="img " src="images/app版式设计图/u763_seg1.png" alt="u763_seg1"/>
+        <img id="u763_seg2" class="img " src="images/app版式设计图/u763_seg2.png" alt="u763_seg2"/>
+        <img id="u763_seg3" class="img " src="images/app版式设计图/u763_seg3.png" alt="u763_seg3"/>
+        <img id="u763_seg4" class="img " src="images/app版式设计图/u763_seg4.png" alt="u763_seg4"/>
+        <img id="u763_seg5" class="img " src="images/app版式设计图/u762_seg5.png" alt="u763_seg5"/>
+        <div id="u763_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u764" class="ax_default _连接线">
+        <img id="u764_seg0" class="img " src="images/app版式设计图/u764_seg0.png" alt="u764_seg0"/>
+        <img id="u764_seg1" class="img " src="images/app版式设计图/u764_seg1.png" alt="u764_seg1"/>
+        <img id="u764_seg2" class="img " src="images/app版式设计图/u764_seg2.png" alt="u764_seg2"/>
+        <img id="u764_seg3" class="img " src="images/app版式设计图/u764_seg3.png" alt="u764_seg3"/>
+        <img id="u764_seg4" class="img " src="images/app版式设计图/u764_seg4.png" alt="u764_seg4"/>
+        <img id="u764_seg5" class="img " src="images/app版式设计图/u764_seg5.png" alt="u764_seg5"/>
+        <img id="u764_seg6" class="img " src="images/app版式设计图/u761_seg4.png" alt="u764_seg6"/>
+        <img id="u764_seg7" class="img " src="images/app版式设计图/u761_seg5.png" alt="u764_seg7"/>
+        <div id="u764_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
