--- a/app版式设计图.html
+++ b/app版式设计图.html
@@ -4562,6 +4562,19 @@
           <p></p>
         </div>
       </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u765" class="ax_default _连接线">
+        <img id="u765_seg0" class="img " src="images/app版式设计图/u765_seg0.png" alt="u765_seg0"/>
+        <img id="u765_seg1" class="img " src="images/app版式设计图/u765_seg1.png" alt="u765_seg1"/>
+        <img id="u765_seg2" class="img " src="images/app版式设计图/u765_seg2.png" alt="u765_seg2"/>
+        <img id="u765_seg3" class="img " src="images/app版式设计图/u765_seg3.png" alt="u765_seg3"/>
+        <img id="u765_seg4" class="img " src="images/app版式设计图/u765_seg4.png" alt="u765_seg4"/>
+        <img id="u765_seg5" class="img " src="images/app版式设计图/u765_seg5.png" alt="u765_seg5"/>
+        <div id="u765_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
